# RSSMOSPipeline

./: .gitattributes  INSTALL.rst  MANIFEST.in  README.md  README.rst  rss_mos_reducer.py  setup.cfg  setup.py
RSSMOSPipeline/: RSSMOSTools.py  __init__.py  _version.py
RSSMOSPipeline/data/modelArcSpectra/: PG0900_Ne_1x2.txt  PG0900_Ne_2x2.txt  PG0900_Ne_2x2_1.txt  PG0900_Xe_1x2.txt  PG0900_Xe_2x2_1.txt  PG0900_Xe_2x4.txt  PG1300_Ar_1x2.txt  PG1300_Ne_1x2.txt  PG1300_Xe_1x2.txt  RefModel_PG0900_Ar_2x2.pickle  RefModel_PG0900_Ar_2x2_1.pickle  RefModel_PG0900_Ne_1x2.pickle  RefModel_PG0900_Ne_2x2.pickle  RefModel_PG0900_Ne_2x2_1.pickle  RefModel_PG0900_Xe_1x2.pickle  RefModel_PG0900_Xe_2x2.pickle  (+12 more)
docs/: commands.rst  conf.py  development.rst  index.rst  usage.rst
modelArcSpectra/: HOW_TO_RUN  PG0900_Ar_2x2.txt  PG0900_Ar_2x2_1.txt  PG0900_Xe_2x2.txt  PG1300_Ar_2x2_1.txt  README  RefModel_PG0900_Ar_2x2.pickle  RefModel_PG0900_Ar_2x2_1.pickle  RefModel_PG0900_Ar_2x2_2.pickle  RefModel_PG0900_Ne_2x2.pickle  RefModel_PG0900_Ne_2x2_1.pickle  RefModel_PG0900_Xe_2x2.pickle  RefModel_PG1300_Ar_2x2.pickle  RefModel_PG1300_Ar_2x2_1.pickle  RefModel_PG1300_Cu Ar_2x2.pickle  RefModel_PG1800_Ne_2x2.pickle  arcData.fits  arcSegMap.fits  createModelArcSpectrum.py  createModelArcSpectrum_old.py  fixRefModel.py  rectWavelengthsMap.fits  rectifiedData.fits  testArc1.fits  testArc2.fits  testmask.fits  wavelengthCalib_testArc1.fits  wavelengthCalib_testArc2.fits  wavelengthCalib_testArc3.fits  wavelengthsMap.fits
tests/: README.rst  tests.robot
tests/lib/: RSSMOSPipelineTests.py
(+18 files in other folders)
