[metadata]
name = RSSMOSPipeline
author = Matt Hilton
author_email = matt.hilton@wits.ac.za
url = https://github.com/mattyowl/RSSMOSPipeline
description = Pipeline for reducing both longslit and multi-object spectroscopic data from the Robert Stobie Spectrograph on the Southern African Large Telescope
long_description = file: README.rst
keywords = astrophysics, astronomy, spectroscopy
license = GPL v3
classifiers =
    Programming Language :: Python :: 3
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: POSIX
    Topic :: Scientific/Engineering :: Astronomy

[options]
install_requires =
    astropy >= 3.2
    numpy >= 1.10
    matplotlib >= 2.0
    scipy >= 1.0
    astLib >= 0.11.10






